--- a/examples/megatron/configs/llama2_7B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_7B-pretrain.yaml
@@ -22,6 +22,8 @@ modules:
       # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
+      eval_iters: 0
+
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
@@ -52,6 +54,7 @@ modules:
       overlap_param_gather: true
 
       # data
+      mock_data: true
       train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
