--- a/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
@@ -51,6 +51,7 @@ modules:
       overlap_param_gather: true
 
       # data
+      mock_data: true
       train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
