ci(primus_turbo): add install Primus-Turbo job.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,8 +50,28 @@ jobs:
         with:
           options: "--check --diff --color --verbose --line-length=110"
 
+  install-turbo:
+    runs-on: run-ut
+    steps:
+      - run: echo "🎉 Begin Primus-Turbo Install."
+      - name: Install Primus-Turbo
+        run: |
+          docker exec primus_github_runner bash -c "
+            cd ${GITHUB_WORKSPACE}/..
+            echo \"Clone Primus-Turbo to ${PWD}\"
+            if [ -d Primus-Turbo ];then
+              echo \"Clear exists Primus-Turbo\"
+              rm -rf Primus-Turbo
+            fi
+            git clone git@github.com:AMD-AIG-AIMA/Primus-Turbo.git -b main
+            cd Primus-Turbo
+            git submodule update --init --recursive
+            pip install -r requirements.txt --verbose
+            pip uninstall primus_turbo -y
+            python setup.py develop"
+
   run-unittest:
-    needs: code-lint
+    needs: [code-lint, install-turbo]
     runs-on: run-ut
     steps:
       - run: echo "🎉 Begin Primus Unit Test."
