--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -60,6 +60,7 @@ fp8_amax_history_len: 1024
 fp8_amax_compute_algo: "max"
 fp8_wgrad: true
 fp8_param_gather: false
+fp8_alltoall: false
 te_rng_tracker: false
 inference_rng_tracker: false
 no_fp8_weight_transpose_cache: false
