--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,12 @@ nltk
 matplotlib
 markdown2
 weasyprint
-opentelemetry
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-proto
+opentelemetry-semantic-conventions
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-exporter-otlp-proto-http
+
+
