--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -111,6 +111,8 @@ no_load_optim: null
 no_load_rng: null
 finetune: false
 use_checkpoint_args: false
+use_mp_args_from_checkpoint_args: false
+use_tokenizer_model_from_checkpoint_args: true
 exit_on_missing_checkpoint: true
 non_persistent_save_interval: null # int
 non_persistent_ckpt_type: null # 'global', 'local', 'in_memory', null
