--- a/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
@@ -16,7 +16,7 @@ modules:
 
       # moe
       moe_router_force_load_balancing: true
-      moe_router_dtype: fp32
+      moe_router_dtype: null
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
