--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -21,7 +21,7 @@ modules:
       # num_layers: 5
       # optimizer: adam
       moe_router_force_load_balancing: true
-      moe_router_dtype: fp32
+      moe_router_dtype: null
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
       # ddp_bucket_size: 629145600
