--- a/tests/trainer/test_megatron_trainer.yaml
+++ b/tests/trainer/test_megatron_trainer.yaml
@@ -20,7 +20,7 @@ modules:
 
       # optimizer: adam
       moe_router_force_load_balancing: true
-      moe_router_dtype: fp32
+      moe_router_dtype: null
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
