--- a/examples/megatron/configs/deepseekv2_lite_pretrain.yaml
+++ b/examples/megatron/configs/deepseekv2_lite_pretrain.yaml
@@ -1,31 +1,47 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: ${EXP_NAME:exp_pretrain}
+exp_name: &exp_name ${EXP_NAME:exp_pretrain}
 workspace: ./output
 
 modules:
   pre_trainer:
-    config: pre_trainer.yaml
     framework: megatron
-    model: ${PRIMUS_MODEL:mixtral_8x22B_v0.1}.yaml
+    config: pre_trainer.yaml
+
+    # model to run
+    model: ${PRIMUS_MODEL:deepseek_v2_lite}.yaml
     overrides:
+      # log
       wandb_project: "Primus_DeepSeek_Pretrain"
       # disable_wandb: false
       # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
-      # moe
+      # debug
+      # num_layers: 5
+      # optimizer: adam
       moe_router_force_load_balancing: true
-      moe_router_dtype: null
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
+      # ddp_bucket_size: 629145600
+
+      # recompute
+      # recompute_granularity: full # full, selective
+      # recompute_method: block # uniform, block
+      # recompute_num_layers: 1 # int
+
+      # profile
+      # profile: true
+      # use_pytorch_profiler: true
+      # profile_step_end: 7
+      # profile_step_start: 6
 
       # hyber parameters
       train_iters: 3
       micro_batch_size: 2
-      global_batch_size: 128
-      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
+      global_batch_size: 512
+      seq_length: ${PRIMUS_SEQ_LENGTH:4096}
+      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -40,15 +56,10 @@ modules:
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:4}
-      expert_model_parallel_size: ${PRIMUS_EP:4}
+      pipeline_model_parallel_size: ${PRIMUS_PP:1}
+      expert_model_parallel_size: ${PRIMUS_EP:8}
       overlap_grad_reduce: true
       overlap_param_gather: true
-
-      # recompute
-      recompute_granularity: full # full, selective
-      recompute_method: block # uniform, block
-      recompute_num_layers: 56 # int
 
       # data
       mock_data: true
@@ -57,8 +68,11 @@ modules:
       test_data_path: null
 
       # fusion
+      # 20250321: need latest megatron docker image
       moe_permute_fusion: false
+      # 20250317: need latest apex in docker image
       gradient_accumulation_fusion: false
+      # 20250317: TE grouped gemm has numerical issue
       moe_use_legacy_grouped_gemm: true
 
       # ckpt
@@ -73,3 +87,4 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+      eval_iters: 0
