--- a/primus/configs/models/megatron/deepseek_v2_base.yaml
+++ b/primus/configs/models/megatron/deepseek_v2_base.yaml
@@ -8,6 +8,7 @@ norm_epsilon: 1.0e-06
 multi_latent_attention: true
 # multi_latent_attention does not support apply_rope_fusion
 apply_rope_fusion: false
+qk_layernorm: true
 
 # moe
 moe_layer_freq: 1
