--- a/examples/torchtitan/configs/llama3_8b.toml
+++ b/examples/torchtitan/configs/llama3_8b.toml
@@ -61,3 +61,16 @@ selective_ac_option = "op"  # "int" = ac every positive int layer or 'op', ac ba
 enable_fsdp_float8_all_gather = false
 precompute_float8_dynamic_scale_for_fsdp = false
 filter_fqns = ["output"]
+
+# ***** Primus-Tubro *****
+[experimental]
+custom_args_module = "primus.backends.torchtitan.primus_turbo_extensions.config_extension"
+
+[primus_turbo]
+enable_primus_turbo = true
+enable_float8 = false
+
+# [primus_turbo.float8_config]
+# enable_attention = false
+# enable_linear = false
+# ************************
