--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
           repository: AMD-AIG-AIMA/Primus-Turbo
           path: Primus-Turbo
           token: ${{ secrets.PRIMUS_TURBO_SECRET }}
-      - run: echo "🎉 Begin Primus-Turbo Install."
+      - run: echo "Begin Primus-Turbo Install."
       - name: Install Primus-Turbo
         run: |
           docker exec primus_github_runner bash -c "
