--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,11 +61,13 @@ jobs:
           path: Primus-Turbo
           token: ${{ secrets.PRIMUS_TURBO_SECRET }}
       - run: echo "Begin Primus-Turbo Install."
+      - run: |
+             echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
+             ls ${GITHUB_WORKSPACE}/Primus-Turbo
       - name: Install Primus-Turbo
         run: |
           docker exec primus_github_runner bash -c "
-            cd ${GITHUB_WORKSPACE}/..
-            cd Primus-Turbo
+            cd ${GITHUB_WORKSPACE}/Primus-Turbo
             git submodule update --init --recursive
             pip install -r requirements.txt --verbose
             pip uninstall primus_turbo -y
