--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,17 +62,13 @@ jobs:
           path: Primus-Turbo
           token: ${{ secrets.PRIMUS_TURBO_SECRET }}
       - run: echo "Begin Primus-Turbo Install."
-      - run: |
-             echo "Primus-Turbo dir: ${GITHUB_WORKSPACE}/Primus-Turbo"
-             ls "${GITHUB_WORKSPACE}/Primus-Turbo"
-             git config --global --add safe.directory ${GITHUB_WORKSPACE}/Primus-Turbo
       - name: Install Primus-Turbo
         run: |
           docker exec primus_github_runner bash -c "
             mv ${GITHUB_WORKSPACE}/Primus-Turbo ${GITHUB_WORKSPACE}/..
+            echo "Primus-Turbo dir: ${GITHUB_WORKSPACE}/../Primus-Turbo"
+            git config --global --add safe.directory ${GITHUB_WORKSPACE}/../Primus-Turbo
             cd ${GITHUB_WORKSPACE}/../Primus-Turbo
-            ls
-            git submodule update --init --recursive
             pip install -r requirements.txt --verbose
             python setup.py develop"
 
@@ -116,4 +112,4 @@ jobs:
           fi
           docker exec -e UT_LOG_PATH="${{ env.UT_LOG_PATH }}" \
                       primus_github_runner bash -c \
-                      "cd $GITHUB_WORKSPACE && ls "${GITHUB_WORKSPACE}/Primus-Turbo" && MASTER_PORT=10009 DATA_PATH=/apps/tas/0_public/data python ./tests/run_unit_tests.py"
+                      "cd $GITHUB_WORKSPACE && MASTER_PORT=10009 DATA_PATH=/apps/tas/0_public/data python ./tests/run_unit_tests.py"
