use args.attn_warmup rather than PRIMUS_WARMUP_ATTN

--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -3,6 +3,9 @@ includes:
 
 trainable: true
 
+# perf
+attn_warmup: false # set to true to decrease iter-1 time when using pp
+
 # logging
 disable_tensorboard: true
 disable_wandb: true
