--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -13,3 +13,6 @@ no_fp8_weight_transpose_cache: false
 
 # perf
 attn_warmup: false # set to true to decrease iter-1 time when using pp
+
+# tool
+dump_pp_data: false
