--- a/tools/preflight/Dockerfile
+++ b/tools/preflight/Dockerfile
@@ -1,11 +1,11 @@
-FROM rocm/megatron-lm:v25.5_py310
+FROM harbor.safe.primus.ai/primussafe/megatron-amd-base:0.0.1
 
 WORKDIR /preflight
 
 COPY . .
 
 RUN pip install -qr requirements.txt
-RUN pip install primus-safe-pulsekit-pytorch-launcher==0.1.0
+RUN pip install primus-safe-pulsekit-pytorch-launcher==0.1.1
 RUN apt install -y -qq libpango-1.0-0 libgdk-pixbuf2.0-0 libffi-dev libcairo2
 
 
