refactor: auto-detect backend and tokenizer from YAML config

--- a/examples/torchtitan/configs/llama3_8B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3_8B-pretrain.yaml
@@ -10,4 +10,7 @@ modules:
 
     # model to run
     model: llama3_8B.yaml
-    # overrides:
+    overrides:
+      sink_level: null
+      file_sink_level: DEBUG
+      stderr_sink_level: INFO
