--- a/examples/megatron/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_405B-pretrain.yaml
@@ -59,15 +59,14 @@ modules:
       no_save_rng: null
       disable_last_saving: true
 
-      use_torch_fsdp2: true
-      use_distributed_optimizer: false
-      overlap_param_gather: false
+      use_torch_fsdp2: false
+      use_distributed_optimizer: true
+      overlap_param_gather: true
       ckpt_format: torch_dist
       sequence_parallel: 1
-      gradient_accumulation_fusion: false
-      #deprecated_use_mcore_models: true
+      gradient_accumulation_fusion: true
 
       # recompute
-      recompute_granularity: full # full, selective
-      recompute_method: block # uniform, block
-      recompute_num_layers: 12 # int
+      # recompute_granularity: full # full, selective
+      # recompute_method: block # uniform, block
+      # recompute_num_layers: 12 # int
