--- a/primus/configs/models/megatron/primus_megatron_model.yaml
+++ b/primus/configs/models/megatron/primus_megatron_model.yaml
@@ -1,3 +1,6 @@
 
 moe_router_force_load_balancing: false
 use_deprecated_20241209_moe_layer: false
+
+window_size: null
+use_hybrid_sliding_window_attention: false
