chore(configs): clean up pretrain YAMLs and standardize exp_name and train_data_path

--- a/examples/megatron/configs/llama2_7B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_7B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: &exp_name ${EXP_NAME:exp-llama2_7B-pretrain}
+exp_name: ${EXP_NAME:llama2_7B-pretrain}
 workspace: ./output
 
 modules:
@@ -50,7 +50,7 @@ modules:
 
       # data
       mock_data: true
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      train_data_path: null
       valid_data_path: null
       test_data_path: null
 
