--- a/examples/megatron/configs/deepseekv2_lite_pretrain.yaml
+++ b/examples/megatron/configs/deepseekv2_lite_pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: &exp_name ${EXP_NAME:exp_pretrain}
+exp_name: ${EXP_NAME:deepseek_v2_lite-pretrain}
 workspace: ./output
 
 modules:
@@ -18,23 +18,9 @@ modules:
       stderr_sink_level: DEBUG
 
       # debug
-      # num_layers: 5
-      # optimizer: adam
       moe_router_force_load_balancing: true
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
-      # ddp_bucket_size: 629145600
-
-      # recompute
-      # recompute_granularity: full # full, selective
-      # recompute_method: block # uniform, block
-      # recompute_num_layers: 1 # int
-
-      # profile
-      # profile: true
-      # use_pytorch_profiler: true
-      # profile_step_end: 7
-      # profile_step_start: 6
 
       # hyber parameters
       train_iters: 3
