--- a/examples/megatron/configs/llama3.1_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_8B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: &exp_name ${EXP_NAME:exp-llama3.1_8B-pretrain}
+exp_name: ${EXP_NAME:llama3.1_8B-pretrain}
 workspace: ./output
 
 modules:
@@ -48,7 +48,7 @@ modules:
 
       # data
       mock_data: true
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      train_data_path: null
       valid_data_path: null
       test_data_path: null
 
