refactor(llama3.1_405B config): rename wandb project, reorder overlap_grad_reduce

--- a/examples/megatron/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_405B-pretrain.yaml
@@ -10,7 +10,7 @@ modules:
     model: llama3.1_405B.yaml
     overrides:
       # log
-      wandb_project: "Primus_DeepSeek_Pretrain"
+      wandb_project: "Primus_Pretrain"
       stderr_sink_level: DEBUG
 
       log_avg_skip_iterations: 2
@@ -39,7 +39,6 @@ modules:
       tensor_model_parallel_size: 8
       pipeline_model_parallel_size: 8
       expert_model_parallel_size: 1
-      overlap_grad_reduce: true
 
       # data
       mock_data: true
@@ -62,3 +61,4 @@ modules:
       use_distributed_optimizer: true
       overlap_param_gather: true
       gradient_accumulation_fusion: true
+      overlap_grad_reduce: true
