--- a/examples/megatron/configs/llama3_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_8B-pretrain.yaml
@@ -1,12 +1,13 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: &exp_name ${EXP_NAME:exp-llama3_8B-pretrain}
+exp_name: ${EXP_NAME:llama3_8B-pretrain}
 workspace: ./output
 
 modules:
   pre_trainer:
     framework: megatron
     config: pre_trainer.yaml
+    # data_path: ./data
 
     # model to run
     model: llama3_8B.yaml
@@ -48,7 +49,7 @@ modules:
 
       # data
       mock_data: true
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      train_data_path: null
       valid_data_path: null
       test_data_path: null
 
