refactor(torchtitan): switch config format from TOML to YAML for llama3 series
- Deleted outdated .toml configs for llama3_8b, 70b, and 405b
- Added corresponding .yaml configs with updated naming
- Updated llama3_8B-pretrain.yaml for consistency
- Migrated model structure configs under primus/configs/models/torchtitan/

--- a/examples/torchtitan/configs/llama3_405B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3_405B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: ${EXP_NAME:llama3_8B-pretrain}
+exp_name: ${EXP_NAME:llama3_405B-pretrain}
 workspace: ./output
 
 modules:
@@ -9,8 +9,20 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: llama3_8B.yaml
+    model: llama3_405B.yaml
     overrides:
       sink_level: null
       file_sink_level: DEBUG
       stderr_sink_level: INFO
+
+      training:
+        batch_size: 2
+
+      optimizer:
+        lr: 8e-5
+
+      parallelism:
+        tensor_parallel_degree: 8
+
+      activation_checkpoint:
+        mode: full
