--- a/.github/workflows/tas.yaml
+++ b/.github/workflows/tas.yaml
@@ -54,6 +54,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: AMD-AIG-AIMA/Primus-Turbo
+          token: '${{ github.token }}'
           ref: main
           submodules: recursive
           path: ./Primus-Turbo
