--- a/.github/workflows/tas.yaml
+++ b/.github/workflows/tas.yaml
@@ -61,9 +61,9 @@ jobs:
       - name: Install Primus-Turbo
         working-directory: ./Primus-Turbo
         run: |
-          sudo -E pip install -r requirements.txt --verbose
-          sudo -E pip uninstall primus_turbo -y || true
-          sudo -E python setup.py develop
+          pip install -r requirements.txt --verbose
+          pip uninstall primus_turbo -y || true
+          python setup.py develop
 
   run-unittest:
     needs: [code-lint, install-turbo]
