--- a/examples/megatron/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_405B-pretrain.yaml
@@ -16,6 +16,14 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
+      # profile
+      profile: true
+      use_pytorch_profiler: true
+      profile_step_end: 7
+      profile_step_start: 6
+      profile_ranks: [0]
+      disable_tensorboard: false
+
       train_iters: ${PRIMUS_TRAIN_ITERS:20}
       micro_batch_size: ${PRIMUS_MBS:1}
       global_batch_size: ${PRIMUS_GBS:256}
@@ -36,8 +44,8 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: 8
-      pipeline_model_parallel_size: 8
+      tensor_model_parallel_size: 2
+      pipeline_model_parallel_size: 2 
       expert_model_parallel_size: 1
 
       # data
