test(megatron): remove redundant BACKEND env and add Mixtral test case
- Removed "BACKEND=megatron" from test cases since backend is now inferred from config
- Added a new unit test for `mixtral_8x7B_v0.1` model
- Enabled mock_data and set train_data_path to null in test config for faster execution

--- a/tests/trainer/test_megatron_trainer.yaml
+++ b/tests/trainer/test_megatron_trainer.yaml
@@ -52,7 +52,8 @@ modules:
 
       # data
       num_workers: 1
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      mock_data: true
+      train_data_path: null
       valid_data_path: null
       test_data_path: null
 
