install turbo in ci, speedup with pip cache

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     tags:
-      - 'v*'
+      - "v*"
   pull_request:
 
 jobs:
@@ -46,8 +46,44 @@ jobs:
         if: always()
         with:
           options: "--check --diff --color --verbose --line-length=110"
+
+  install-turbo:
+    runs-on: run-ut
+    steps:
+      - run: echo "🎉 Begin Primus-Turbo Checkout."
+      - name: Checkout Repo Primus-Turbo
+        uses: actions/checkout@v4
+        with:
+          repository: AMD-AIG-AIMA/Primus-Turbo
+          submodules: "recursive"
+          path: Primus-Turbo
+          token: ${{ secrets.PRIMUS_TURBO_SECRET }}
+          ref: 9499c6e74c9d62997775dd841ab268eb9fca98b4 # feat(async-tp): support fused_all_gather_matmul for async-tp.
+      - run: echo "Begin Primus-Turbo Install."
+      - name: Install Primus-Turbo
+        run: |
+          docker exec primus_github_runner bash -c "
+            mv ${GITHUB_WORKSPACE}/Primus-Turbo ${GITHUB_WORKSPACE}/..
+            echo 'Primus-Turbo dir: ${GITHUB_WORKSPACE}/../Primus-Turbo'
+            git config --global --add safe.directory ${GITHUB_WORKSPACE}/../Primus-Turbo
+            cd ${GITHUB_WORKSPACE}/../Primus-Turbo
+            start_time=$(date +%s)
+            echo '✅ [Pip install requirements] started at: $(date)'
+            MAX_JOBS=128 pip install --cache-dir=./pip_cache --no-build-isolation --no-clean -r requirements.txt
+            end_time=$(date +%s)
+            elapsed=$((end_time - start_time))
+            echo '✅ [Pip install requirements] ended at: $(date)'
+            echo '⏱️ [Pip install requirements] Total elapsed time: ${elapsed} seconds'
+            start_time=$(date +%s)
+            echo '✅ [build primus-turbo] started at: $(date)'
+            python setup.py develop
+            end_time=$(date +%s)
+            elapsed=$((end_time - start_time))
+            echo '✅ [build primus-turbo] ended at: $(date)'
+            echo '⏱️ [build primus-turbo] Total elapsed time: ${elapsed} seconds'"
+
   run-unittest:
-    needs: [code-lint]
+    needs: [code-lint, install-turbo]
     runs-on: [tas-k8s]
     steps:
       - run: echo "🎉 Begin Primus Unit Test."
