--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,6 +85,8 @@ jobs:
           echo '✅ [build primus-turbo] ended at: $(date)'
           echo '⏱️ [build primus-turbo] Total elapsed time: ${elapsed} seconds'
   run-unittest:
+    env:
+      PRIMUS_WORKDIR: /apps/tas/0_public/primus_k8s_ci
     defaults:
       run:
         working-directory: /apps/tas/0_public/primus_k8s_ci
@@ -95,10 +97,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          path: Primus
+      - name: Move Primus
+        run: |
+          rm -rf ${PRIMUS_WORKDIR}/Primus
+          mv Primus ${PRIMUS_WORKDIR}/
+          cd ${PRIMUS_WORKDIR}/Primus
       - name: Install Primus
+        working-directory: ${{ env.PRIMUS_WORKDIR }}/Primus
         run: |
           pip install -r requirements.txt
       - name: Set UT_LOG_PATH
+        working-directory: ${{ env.PRIMUS_WORKDIR }}/Primus
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             echo "UT_LOG_PATH=$GITHUB_WORKSPACE/ut_out/pr-${{ github.event.pull_request.number }}" >> $GITHUB_ENV
@@ -112,6 +122,7 @@ jobs:
             echo "UT_LOG_PATH=$GITHUB_WORKSPACE/ut_out/others" >> $GITHUB_ENV
           fi
       - name: Run Unit Tests
+        working-directory: ${{ env.PRIMUS_WORKDIR }}/Primus
         env:
           HF_TOKEN: ${{secrets.HF_TOKEN}}
         run: |
